# QtProject

./: Activity.h  AddNewActivityDialog.cpp  AddNewActivityDialog.h  CMakeLists.txt  Date.cpp  Date.h  EventsDisplayerDialog.cpp  EventsDisplayerDialog.h  MainDialog.cpp  MainDialog.h  Register.h  SavedOrNotDialog.cpp  SavedOrNotDialog.h  Time.h  main.cpp
